# python-saas-test

./: .gitignore  README.md  pyproject.toml
app/: database.py  indiepitcher.py  main.py
app/models/: firebase_auth_user.py  organization.py  organization_membership.py  profile.py
app/routes/: di.py  organizations.py  profiles.py
app/service/: analytics_service.py  email_service.py
app/use_cases/: use_cases.py
tests/routes/: conftest.py  test_organizations.py  test_profiles.py
