[project]
name = "indie_pitcher"
version = "0.1.0"
description = "Backend for IndiePitcher application"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.21",
    "sqlmodel[asyncio]>=0.0.24",
    "aiosqlite>=0.21.0",
    "alembic>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.292",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.ruff.lint]
extend-select = ["I", "UP", "T20"]
ignore = [
  "F841",  # remove unused variables
  "UP040", # new type alias syntax not supported by mypy yet
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
  "F401", # remove unused import
]
"scripts/*" = ["T20"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
